--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ https://www.tooplate.com/view/2127-little-fashion
                     </button>
 
                     <a class="navbar-brand" href="index.html">
-                        <strong><span>Little</span> Fashion</strong>
+                        <strong><span>ITYourWay</span> Platform</strong>
                     </a>
 
                     <div class="d-lg-none">
@@ -97,9 +97,9 @@ https://www.tooplate.com/view/2127-little-fashion
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-6 col-10">
-                                    <h1 class="slick-title">Cool Fashion</h1>
+                                    <h1 class="slick-title">DevOps Engineering</h1>
 
-                                    <p class="lead text-white mt-lg-3 mb-lg-5">Little fashion template comes with total 8 HTML pages provided by Tooplate website.</p>
+                                    <p class="lead text-white mt-lg-3 mb-lg-5">We offer the best DevOps/Linux Training.</p>
 
                                     <a href="about.html" class="btn custom-btn">Learn more about us</a>
                                 </div>
@@ -115,9 +115,9 @@ https://www.tooplate.com/view/2127-little-fashion
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-6 col-10">
-                                    <h1 class="slick-title">New Design</h1>
+                                    <h1 class="slick-title">Collaborative Environment</h1>
 
-                                    <p class="lead text-white mt-lg-3 mb-lg-5">Please share this Little Fashion template to your friends. Thank you for supporting us.</p>
+                                    <p class="lead text-white mt-lg-3 mb-lg-5">We offer the best Collaborative Environmentr.</p>
 
                                     <a href="product.html" class="btn custom-btn">Explore products</a>
                                 </div>
@@ -133,7 +133,7 @@ https://www.tooplate.com/view/2127-little-fashion
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-6 col-10">
-                                    <h1 class="slick-title">Talk to us</h1>
+                                    <h1 class="slick-title">JoinUs Now</h1>
 
                                     <p class="lead text-white mt-lg-3 mb-lg-5">Tooplate is one of the best HTML CSS template websites for everyone.</p>
 
