--- a/faq.html
+++ b/faq.html
@@ -49,7 +49,7 @@ https://www.tooplate.com/view/2127-little-fashion
                     </button>
 
                     <a class="navbar-brand" href="index.html">
-                        <strong><span>Little</span> Fashion</strong>
+                        <strong><span>ITYOURWAY</span> PLATFORM</strong>
                     </a>
 
                     <div class="d-lg-none">
@@ -96,7 +96,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
                         <div class="col-lg-10 col-12">
                             <h1>
-                                <span class="d-block text-primary">Your favorite questions</span>
+                                <span class="d-block text-primary">Welcome to our FAQ page</span>
                                 <span class="d-block text-dark">and our answers to them</span>
                             </h1>
                         </div>
@@ -147,7 +147,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <div class="accordion-item">
                                     <h2 class="accordion-header" id="headingThree">
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordionGeneralThree" aria-expanded="false" aria-controls="accordionGeneralThree">
-                                        How do I support your website?
+                                        How do I enroll now?
                                         </button>
                                     </h2>
 
