--- a/sign-up.html
+++ b/sign-up.html
@@ -25,7 +25,7 @@
         
 <!--
 
-Tooplate 2127 Little Fashion
+Tooplates 2127 Little Fashion
 
 https://www.tooplate.com/view/2127-little-fashion
 
