--- a/faq.html
+++ b/faq.html
@@ -49,7 +49,7 @@ https://www.tooplate.com/view/2127-little-fashion
                     </button>
 
                     <a class="navbar-brand" href="index.html">
-                        <strong><span>ITYOURWAY</span> PLATFORM</strong>
+                        <strong><span>ITYourWay</span> Platform</strong>
                     </a>
 
                     <div class="d-lg-none">
