--- a/product-detail.html
+++ b/product-detail.html
@@ -118,10 +118,10 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <div>
                                     <h2 class="product-title mb-0">Tree pot</h2>
 
-                                    <p class="product-p">Original package design from house</p>
+                                    <p class="product-p">Original package design from the house</p>
                                 </div>
 
-                                <small class="product-price text-muted ms-auto mt-auto mb-5">$25</small>
+                                <small class="product-price text-muted ms-auto mt-auto mb-5">$30</small>
                             </div>
 
                             <div class="product-description">
